--- a/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer/app/manifest.json
+++ b/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer/app/manifest.json
@@ -4,9 +4,10 @@
   "name": "Radio SLO",
   "short_name": "Radio SLO! Free online radio player.",
   "description": "Radio SLO is extension app where you can select your popular radio to play in background of chrome browser.",
-  "version": "1.1.2",
+  "version": "1.1.3",
 
   "permissions": [
+    "management",
     "background",
 	"tabs", 
 	"http://*/*", 
