--- a/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer/app/manifest.json
+++ b/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer/app/manifest.json
@@ -2,9 +2,9 @@
   "manifest_version": 2,
 
   "name": "Radio SLO",
-  "short_name": "Radio SLO! Free online radio player.",
+  "short_name": "Radio SLO online radio player.",
   "description": "Radio SLO is extension app where you can select your popular radio to play in background of chrome browser.",
-  "version": "1.1.4",
+  "version": "1.1.5",
 
   "permissions": [
     "management",
