--- a/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer.csproj
+++ b/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer/ChromeExtensionProjectRadioPlayer.csproj
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <Import Project="..\packages\MSBuild.Extension.Pack.1.9.1\build\net40\MSBuild.Extension.Pack.targets"></Import>
+  <Import Project="..\packages\MSBuild.Extension.Pack.1.9.1\build\net40\MSBuild.Extension.Pack.targets">
+  </Import>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -71,6 +72,7 @@
     <Content Include="app\fonts\icomoon.woff" />
     <Content Include="app\manifest.json" />
     <Content Include="app\data\stations.json" />
+    <Content Include="app\manifest_v3.json" />
     <None Include="packages.config" />
     <None Include="scripts\_references.js" />
     <None Include="scripts\chrome-api-vsdoc.js" />
